force-app/main/default/objects/Order__b/Order__b.object-meta.xml
<CustomObject>
    <label>Order</label>
    <pluralLabel>Orders</pluralLabel>
</CustomObject>