force-app/main/default/objects/Order__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account Id</description>
    <inlineHelpText>Standard Account Reference</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>