force-app/main/default/objects/Order__b/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount for this order.</description>
    <inlineHelpText>Amount for this order.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>