force-app/main/default/objects/Order__b/fields/Transaction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Transaction_DateTime__c</fullName>
    <label>Transaction DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>